--- a/index.html
+++ b/index.html
@@ -1,62 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Alioune's Personal Site</title>
-</head>
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/WebDevProfile.jpg" alt="angela profile picture"></td>
-      <td><h1>Alioune</h1>
-        <p><em>Founder and CTO of <strong><a href="https:www.appbrewery.co/">The App Brewery</a></strong></em></p>
-        <p>I am an IOS and Web Developer. I love coffee and brew my own beers.</p></td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Books and Teaching</h3>
-  <ul>
-    <li>The Complete iOS App Development</li>
-    <li>The Complete Web Development Bootcamps</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2010-2013</td>
-        <td>Lead Developer at Tempo Apps</td>
-      </tr>
-      <tr>
-        <td>2010</td>
-        <td>Researcher at the Institute if Cognitive Neurosciences</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-      <table cellspacing="10">
-        <tr>
-          <td>iOS Development</td>
-          <td>🌟🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-          <td>Web Development</td>
-          <td>🌟🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-          <td>Photography</td>
-          <td>🌟🌟</td>
-        </tr>
-      </table>
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="Contacts.html">Contact Me</a>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Alioune Diagne</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="topcloud"src="images\cloud.png"alt="cloud">
+      <h1>I'm Alioune.</h1>
+      <h2>a programmer</h2>
+      <img class="bottomcloud"src="images\cloud.png"alt="cloud">
+      <img src="images/mountain.png"alt="mountains">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="my-face"src="https://image.flaticon.com/icons/svg/1941/1941479.svg" alt="Me">
+        <h2>Hello.</h2>
+        <p class="intro">Welcome to my first website.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="Gym" src="https://image.flaticon.com/icons/svg/249/249187.svg" alt="Gym">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="Skills" src="https://image.flaticon.com/icons/svg/1087/1087843.svg" alt="MySkills">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2018 Name Surname.</p>
+    </div>
+  </body>
 </html>
